...
          'Daftar Pengeluaran',
          style: TextStyle(fontWeight: FontWeight.bold, color: Colors.white),
        ),
        centerTitle: true,
        iconTheme: const IconThemeData(color: Colors.white),
        leading: IconButton(
          key: const Key('btn_back_to_dashboard'),
          icon: const Icon(Icons.arrow_back),
          onPressed: () {
            Navigator.pop(context);
          },
        ),

        actions: [
          IconButton(
            key: const Key('btn_filter'),
            icon: Icon(
              _showFilter ? Icons.filter_alt_off : Icons.filter_alt,
              color: Colors.white,
            ),
            onPressed: () {
              setState(() {
...
                    crossAxisAlignment: CrossAxisAlignment.start,
                    children: [
                      Row(
                        mainAxisAlignment: MainAxisAlignment.spaceBetween,
                        children: [
                          const Text(
                            'Filter',
                            style: TextStyle(
                              fontWeight: FontWeight.bold,
                              fontSize: 16,
                              color: Colors.black,
                            ),
                          ),
...
                      ),
                      const SizedBox(height: 20),
                      Row(
                        mainAxisAlignment: MainAxisAlignment.end,
                        children: [
                          OutlinedButton(
                             key: const Key('filter_reset_button'),
                            onPressed: () {
                              setState(() {
                                _searchController.clear();
                                _filterKategori = '-- Pilih Kategori --';
                                _filterDari = null;
                                _filterSampai = null;
...
                              });
                            },
                            child: const Text("Reset Filter"),
                          ),
                          const SizedBox(width: 12),
                          ElevatedButton(
                            key: const Key('filter_apply_button'),
                            onPressed: () {
                              setState(() {
                                _filterKategori = _filterKategoriTemp;
                                _searchController.text =
                                    _filterSearchTemp ?? "";
                                _filterDari = _filterDariTemp;
...
        ],
      ),
      floatingActionButtonLocation: FloatingActionButtonLocation.endFloat,
      floatingActionButton: Padding(
        padding: const EdgeInsets.only(bottom: 16.0, right: 16.0),
        child: FloatingActionButton(
          key: const Key('btn_tambah_pengeluaran'),
          child: const Icon(Icons.add),
          onPressed: () async {
            final result = await Navigator.pushNamed(
              context,
              '/tambah-pengeluaran',
            );
...
