...
                  // Tombol Pesan
                  const SizedBox(width: 8),
                  // Tombol Logout
                  Material(
                    color: Colors.transparent,
                    child: InkWell(
                       key: const Key('btn_profile'),
                      borderRadius: BorderRadius.circular(12),
                      onTap: () {
                        // TAMPILKAN DIALOG KONFIRMASI
                        showDialog(
                          context: context,
                          builder: (BuildContext context) {
...
                                    "Batal",
                                    style: TextStyle(color: Colors.grey),
                                  ),
                                ),
                                // Tombol Ya/Keluar
                                TextButton(
                                  key: const Key('btn_logout'),
                                  onPressed: () async {
                                    Navigator.of(context).pop(); // Tutup dialog

                                    try {
                                      // LAKUKAN AKSI LOGOUT
                                      final authServices = AuthServices();
...
